2009-01-13  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watraypluginmanagerview.vala:
	
	Fix creation year.
	
	*  po/es.po:
	*  po/POTFILES.skip:
	*  po/POTFILES.in:

	Added spanish translation of PluginManagerView and PreferenceDialog

2009-01-13  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watraymainwindow.vala:
	*  watray/watraypluginmanagerview.vala:
	*  watray/watraypluginmanager.vala:
	*  watray/watraypreferencedialog.vala:
	*  watray/Makefile.am:

	Added preferences dialog with plugins tab.

2009-01-12  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayprojectspanel.vala:
	*  watray/watrayprojectspanelinterface.vala:

	Added error handling to the project panel to check if the project was
	added to the projects panel and if the item's path is correct.

2009-01-12  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watraysimple/simpledocumentview.vala:
	*  watraysimple/Makefile.am:
	*  watraysimple/simpleplugin.vala:
	*  watraysimple/simpleprojectmanager.vala:
	*  configure.ac:
	*  watray/watrayproject.vala:
	*  watray/watrayprojectspanel.vala:
	*  watray/watraydocumentview.vala:
	*  watray/watraydocumentspanel.vala:
	*  watray/watrayprojectspanelinterface.vala:
	*  watray/Makefile.am:
	*  watray/watraydocumentspanelinterface.vala:

	Start basic support for a project manager.

2009-01-08  Matias De la Puente  <mfpuente.ar@gmail.com>

	* watray/watrayprojectspanelitem.vala:
	* watray/watrayprojectspanelinterface.vala:
	* watray/Makefile.am
	* watray/watrayprojectspanelproject.vala
	
	Replace Watray.ProjectsPanelItem with Watray.ProjectsPanelProject.
	
2009-01-08  Matias De la Puente  <mfpuente.ar@gmail.com>

	* watray/watraydocumentspanel.vala:
	
	Fix remove_view method due to compiler update
	
2009-01-07  Matias De la Puente  <mfpuente.ar@gmail.com>

	* watray/watrayprojectspanel.vala:
	* watray/watraymainwindow.vala:
	
	Added title and body to the projects panel.